tests/NormalTests/paczka1/small_fuzzy/52423177.err
Error in line 1: XHYpc A4 69,2
Error in line 5: XHYpc S168 89,6
Error in line 3: L5Twdjv8ld A4 31,2
